--- a/assets/scss/registr.scss
+++ b/assets/scss/registr.scss
@@ -1,6 +1,6 @@
 * {
-  margin: 0;
   padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -129,8 +129,6 @@ header {
           z-index: 1;
           overflow: hidden;
 
-        
-
           .box_device {
             li {
               border-bottom: 1px solid black;
@@ -182,7 +180,7 @@ header {
       top: 70%;
       right: 5%;
       transition: 0.3s all;
-      .input_div{
+      .input_div {
         position: absolute;
         right: 0;
       }
@@ -301,801 +299,110 @@ header {
       }
     }
   }
-  
+
   .mobile-menu.active {
     width: 200px;
   }
-
 }
 
-#base {
-  @media screen and (max-width: 391px) {
-    & {
-      top: 70px;
-    }
-  }
-
-  &:hover {
-    .right {
-      opacity: 1;
-    }
-
-    .left {
-      opacity: 1;
-    }
-  }
-
-  .right {
-    cursor: pointer;
-    width: 33px;
-    height: 33px;
-    padding: 4px 10px;
-    position: absolute;
-    top: 300px;
-    right: 25px;
-    z-index: 2;
-    background-color: #eb4d4b;
-    transition: 0.3s;
-    opacity: 0;
-
-    &:hover {
-      background-color: #333;
-    }
-
-    i {
-      color: white;
-    }
-  }
-
-  .left {
-    cursor: pointer;
-    width: 33px;
-    height: 33px;
-    padding: 4px 10px;
-    position: absolute;
-    top: 300px;
-    left: 25px;
-    z-index: 2;
-    background-color: #eb4d4b;
-    transition: 0.3s;
-    opacity: 0;
-
-    &:hover {
-      background-color: #333;
-    }
-
-    i {
-      color: white;
-    }
-  }
-
-  .fastDrone {
-    position: relative;
-
-    .droneImage {
-      position: absolute;
-      width: 100%;
-      cursor: pointer;
-
-      img {
-        width: 100%;
-
-        @media screen and (max-width: 391px) {
-          & {
-            content: url("../images/responsive_slider1.png");
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    .droneInfo {
-      cursor: pointer;
-      position: absolute;
-      top: 40px;
-      left: 120px;
-      width: 50%;
-      color: white;
-      overflow: hidden;
-
-      @media screen and (max-width: 391px) {
-        & {
-          width: 100%;
-          position: absolute;
-          top: 180px;
-          left: 0;
-          text-align: center;
-        }
-      }
-
-      .title-text {
-        width: 80%;
-
-        @media screen and (max-width: 391px) {
-          & {
-            width: 100%;
-          }
-        }
-
-        @media screen and (max-width: 821px) {
-          & {
-            padding-top: 20px;
-          }
-        }
-
-        h2 {
-          @media screen and (max-width: 391px) {
-            & {
-              font-size: 18px;
-            }
-          }
-        }
-
-        h1 {
-          padding: 8px 0;
-          font-size: 75px;
-
-          @media screen and (max-width: 821px) {
-            & {
-              font-size: 35px;
-            }
-          }
-
-          @media screen and (max-width: 391px) {
-            & {
-              font-size: 18px;
-            }
-          }
-        }
-
-        p {
-          @media screen and (max-width: 391px) {
-            & {
-              display: none;
-            }
-          }
-        }
-      }
-    }
-
-    .droneButton {
-      button {
-        border-radius: 20px;
-        color: white;
-        border: none;
-
-        @media screen and (max-width: 391px) {
-          & {
-            font-size: 10px;
-            margin-bottom: 30px;
-          }
-        }
-
-        background-color: #eb4d4b;
-
-        &:hover {
-          background-color: #333;
-        }
-      }
-    }
-  }
-
-  .underwaterDrone {
-    position: relative;
-
-    .droneImage {
-      cursor: pointer;
-
-      img {
-        width: 100%;
-
-        @media screen and (max-width: 391px) {
-          & {
-            content: url("../images/responsive_slider2.png");
-            width: 100%;
-          }
-        }
-      }
-    }
-
-    .droneInfo {
-      cursor: pointer;
-      position: absolute;
-      top: 50px;
-      right: 0;
-      width: 50%;
-      color: white;
-      overflow: hidden;
-
-      @media screen and (max-width: 391px) {
-        & {
-          width: 100%;
-          position: absolute;
-          top: 180px;
-          text-align: center;
-        }
-      }
-
-      .title-text {
-        width: 70%;
-
-        @media screen and (max-width: 391px) {
-          & {
-            width: 100%;
-          }
-        }
-
-        @media screen and (max-width: 821px) {
-          & {
-            padding-top: 18px;
-          }
-        }
-
-        h2 {
-          @media screen and (max-width: 391px) {
-            & {
-              font-size: 18px;
-            }
-          }
-        }
-
-        h1 {
-          padding: 8px 0;
-          font-size: 60px;
-
-          @media screen and (max-width: 821px) {
-            & {
-              font-size: 28px;
-            }
-          }
-
-          @media screen and (max-width: 391px) {
-            & {
-              font-size: 22px;
-            }
-          }
-        }
-
-        p {
-          @media screen and (max-width: 391px) {
-            & {
-              display: none;
-            }
-          }
-        }
-      }
-    }
-
-    .droneButton {
-      button {
-        border-radius: 20px;
-        color: white;
-        border: none;
-
-        @media screen and (max-width: 391px) {
-          & {
-            font-size: 10px;
-            margin-bottom: 30px;
-          }
-        }
-
-        background-color: #eb4d4b;
-
-        &:hover {
-          background-color: #333;
-        }
-      }
-    }
-  }
-}
-
-#import {
-  .animeIcon {
-    .image {
-      display: flex;
-      justify-content: center;
-
-      img {
-        transition: 0.6s;
-      }
-      &:hover img {
-        transform: rotateY(360deg);
-      }
-    }
-
-    .title-text {
-      text-align: center;
-      p {
-        color: gray;
-      }
-    }
-  }
-  @media screen and (max-width: 391px) {
-    .animeIcon {
-      display: flex;
-      .title-text {
-        margin-left: 20px;
-        text-align: left;
-      }
-      .image {
-        width: 60px;
-        height: 60px;
-        padding: 8px 0;
-        display: flex;
-        justify-content: center;
-
-        img {
-          width: 100%;
-          height: 100%;
-          transition: 0.6s;
-        }
-      }
-    }
-  }
-}
-
-#about {
-  padding: 48px;
-  .image {
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .about {
-    .title {
-      font-size: 16px;
-      letter-spacing: 8px;
-      font-weight: 500;
-      margin-bottom: 12px;
-      color: #eb4d4b;
-    }
-    .home_title {
-      .home-title {
-        font-size: 40px;
-        line-height: 40px;
-        letter-spacing: 0;
-        font-weight: 600;
-        color: #232323;
-        position: relative;
-        display: inline-block;
-        margin-bottom: 25px;
-        padding-bottom: 25px;
-
-        &::before {
-          position: absolute;
-          content: "";
-          width: 80px;
-          height: 4px;
-          background: #eb4d4b;
-          bottom: 0;
-        }
-      }
-    }
-    .desc {
-      margin-bottom: 25px;
-      font-size: 14px;
-      font-weight: 400;
-      color: #787878;
-      letter-spacing: 0.5px;
-      line-height: 24px;
-    }
-    ::marker {
-      color: red;
-    }
-    .view_more {
-      margin-top: 18px;
-      padding-left: 18px;
-      padding-right: 18px;
-      border-radius: 20px;
-      &:hover {
-        background-color: black;
-        border: 1px solid black;
-      }
-    }
-  }
-}
-
-#products {
-  background-image: url(../images/testimonialbackground.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  padding: 48px;
-  .title {
-    .subtitle {
-      font-size: 26px;
-      margin: 0;
-      margin-bottom: 12px;
-      color: #eb4d4b;
-    }
-    .home {
-      font-size: 34px;
-      position: relative;
-      .home_title:before {
-        position: absolute;
-        content: "";
-        width: 80px;
-        height: 4px;
-        background: #eb4d4b;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        text-align: center;
-        margin: 0 auto;
-        margin-top: 20px;
-      }
-    }
-  }
-
-  .item {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    .detail {
-      position: relative;
-      text-align: left;
-      background: #fff;
-      padding: 65px 50px 40px;
-      margin-top: 60px;
-      .image {
-        max-width: 100px;
-        border-radius: 50%;
-        overflow: hidden;
-        border: 5px solid #eb4d4b;
-        margin: 0 auto;
-        padding: 0;
-        text-align: center;
-        position: absolute;
-        top: -60px;
-        left: 50px;
-      }
-    }
-    .user_description {
-      margin-bottom: 15px;
-      line-height: 24px;
-      font-weight: 400;
-      font-size: 14px;
-      letter-spacing: 0.5px;
-      color: #666;
-    }
-    .user_detail {
-      .user_name {
-        position: relative;
-        display: inline-block;
-        font-size: 24px;
-        line-height: 24px;
-        font-weight: 500;
-        color: #232323;
-      }
-      .user_designation {
-        font-size: 14px;
-        font-weight: 400;
-        padding-left: 6px;
-        letter-spacing: 0.5px;
-        color: #eb4d4b;
-        display: inline-block;
-      }
-    }
-  }
-}
-
-#latest {
-  .title {
-    .subtitle {
-      font-size: 26px;
-      margin: 0;
-      margin-bottom: 12px;
-      color: #eb4d4b;
-    }
-    .home {
-      font-size: 34px;
-      position: relative;
-      .home-title:before {
-        position: absolute;
-        content: "";
-        width: 80px;
-        height: 4px;
-        background: #eb4d4b;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        text-align: center;
-        margin: 0 auto;
-        margin-top: 20px;
-      }
-    }
-  }
-  .latest_ul {
+#clipboard {
+  .clipboard_background {
+    background-image: url(../images/breadcrumb.png);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 200px;
     display: flex;
     justify-content: center;
     align-items: center;
-    .latest_ul_li {
-      border: 1px solid rgb(238, 235, 235);
-      padding: 5px;
-      margin: 1px;
-      display: inline-block;
-      &:hover {
-        background-color: #f3ebeb;
-      }
-    }
-   
-  }
-  .device {
-    margin-bottom: 110px;
-    padding: 11px;
-    height: 400px;
-    position: relative;
-    .image {
-      height: 100%;
-      position: relative;
-      img {
-        width: 100%;
-        height: 100%;
-      }
-
-      .first {
-        position: absolute;
-        opacity: 1;
-        transition: 1s all;
-      }
-      .second {
-        position: absolute;
-        opacity: 0;
-        transition: 1s all;
-      }
-      &:hover {
-        .first {
-          opacity: 0;
-          transform: rotateY(180deg);
-        }
-        .second {
-          opacity: 1;
-          transform: rotateY(180deg);
+    ul {
+      li {
+        font-size: 14px;
+        a {
+          transition: 0.5s;
+          color: #232323;
+          &::after{
+            content: " ";
+            display: inline;
+            border-right: 1px solid #232323;
+            margin-left: 5px;
+            margin-right: 5px;
+          }
+        
+          &:hover {
+            color: #eb4d4b;
+          }
         }
       }
-      cursor: pointer;
-    }
-    .rating {
-      position: absolute;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      .yellow{
-        color: yellow;
-      }
-    }
-    .buttons {
-      position: absolute;
-      left: auto;
-      right: 16px;
-      top: 10px;
-      display: block;
-      .allbutton {
-        border: 1px solid black;
-        padding: 6px;
-        border-radius: 50%;
-        margin-top: 5px;
-        opacity: 0;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        transition: 0.5s all;
-        cursor: pointer;
-      }
-    }
-    .allbutton.active {
-      opacity: 1;
     }
   }
-  .caption {
-    padding: 10px;
-    .add_cart {
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #eb4d4b;
-      position: absolute;
-      left: 50%;
-      transform: translate(-50%);
-      bottom: -62px;
-      transition: 0.5s all;
-      overflow: hidden;
-      opacity: 0;
-      height: 35px;
-      width: 120px;
-      cursor: pointer;
-    }
-    .add_cart.active {
-      opacity: 1;
-    }
-    .description {
-      margin-bottom: 10px;
-    }
-    .price {
-      color: #eb4d4b;
-      font-size: 16px;
-      margin-bottom: 5px;
-      transition: all 0.4s;
-      opacity: 1;
-    }
-  }
-  .active{
-    display: block;
-  }
-  .second_crsl{
-    display: none;
-  }
-  .third_crsl{
-    display: none;
-  }
-  .owl-theme .owl-dots .owl-dot span{
-    visibility: hidden;
-  }
-  
 }
 
-#faq {
-  background-color: #f2f6f9;
-
-  .faq_caption {
+#registration {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  .alert {
+    .warning {
+      padding: 10px;
       text-align: center;
-      padding: 50px 0 0 0;
-      margin: 50px 0 0 0;
-
-      @media screen and (max-width: 391px) {
-          & {
-              margin: 20px 0 0 0;
-              padding: 20px 0 0 0;
-          }
-      }
-
-      @media screen and (max-width: 821px) {
-          & {
-              font-size: 14px;
-              padding: 12px 0 0 0;
-              letter-spacing: 3px;
-          }
-      }
-
-      h5 {
-          font-size: 17px;
+      color: gray;
+      a {
+        cursor: pointer;
+        color:#232323;;
+        &:hover {
           color: #eb4d4b;
-          text-transform: uppercase;
-          letter-spacing: 7px;
-
-          @media screen and (max-width: 391px) {
-              & {
-                  font-size: 14px;
-                  letter-spacing: 3px;
-                  padding: 12px 0 0 0;
-                  letter-spacing: 10px;
-              }
-          }
-
-          @media screen and (max-width: 821px) {
-              & {
-                  font-size: 14px;
-                  padding: 12px 0 0 0;
-                  letter-spacing: 3px;
-              }
-          }
+        }
       }
-
-      h1 {
-          font-size: 40px;
-          font-weight: 700;
-
-          @media screen and (max-width: 391px) {
-              & {
-                  font-size: 26px;
-              }
-          }
-
-          @media screen and (max-width: 821px) {
-              & {
-                  font-size: 26px;
-              }
-          }
-      }
+    }
   }
-
-  .line_ {
-      margin: 14px auto 50px;
-      width: 10%;
-      height: 4px;
-      background-color: #eb4d4b;
-
-      @media screen and (max-width: 391px) {
-          & {
-              width: 20%;
-              margin: 12px auto;
-          }
+  form {
+    .registr_detail {
+      padding-top: 15px;
+      padding-bottom: 15px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .registr_detail_btn {
+        border: 1px solid #232323;
+        background-color: #232323;
+        transition: 0.8s;
+        &:hover {
+          background-color: #eb4d4b;
+        }
       }
 
-      @media screen and (max-width: 821px) {
-          & {
-              margin: 12px auto;
-          }
+      input {
+        width:100%;
+        height: 30px;
+         border: 1px solid rgb(241, 238, 238);
+        &::placeholder {
+          padding: 5px 10px;
+          font-size: 14px;
+        }
       }
-  }
-
-  .accordion {
-      padding: 20px 100px;
-
-      @media screen and (max-width: 391px) {
-          & {
-              padding: 20px 30px;
-          }
+      .radio {
+        width: 15px;
+        height: 15px;
+        padding: 0;
+      }
+      .import {
+        font-weight: 600;
+        width: 25%;
+        sup {
+          color: red;
+          font-size: 16px;
+          margin-right: 5px;
+          position: relative;
+          top: 2px;
+        }
       }
 
-      @media screen and (max-width: 821px) {
-          & {
-              padding: 20px 10px;
-          }
-      }
-
-      .title_info {
-          border-bottom: 1px solid lightgray;
-
-          .title_info_faq_title {
-              width: 100%;
-              padding: 14px 0;
-              width: 100%;
-              height: 50px;
-
-              h5 {
-                  color: #333;
-                  float: left;
-
-                  @media screen and (max-width: 391px) {
-                      & {
-                          font-size: 15px;
-                      }
-                  }
-              }
-
-              i {
-                  font-size: 14px;
-                  float: right;
-                  transform: rotate(0deg);
-                  transition: 0.1s;
-              }
-
-              i.active {
-                  transform: rotate(180deg);
-              }
-          }
-
-          .faq_info_ {
-              color: #787878;
-              display: none;
-
-              p {
-                  @media screen and (max-width: 391px) {
-                      & {
-                          font-size: 13px;
-                      }
-                  }
-              }
-          }
-
-          ._faq_ {
-              display: block;
-          }
-      }
-  }
-
-}
-
-#reclams{
-  .item{
-    .image{
-      img{
-        transition: 0.6s all;
-      }
-      &:hover img{
-          transform: rotateY(360deg);
+    }
+    .title{
+      h5 {
+        border-bottom: 1px solid gray;
+        padding-top: 10px;
+        padding-bottom: 10px;
       }
     }
   }
@@ -1572,6 +879,3 @@ footer {
     }
   }
 }
-
-
-
