--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -356,6 +356,8 @@ header .mobile-menu.active {
   padding: 15px;
 }
 #login .container .row .login .text p {
+  font-weight: 700;
+  line-height: 0px;
   font-size: 16px;
   color: #333;
   padding-top: 3px;
@@ -462,6 +464,7 @@ footer .contact form .right {
   display: inline-block;
   width: 46%;
   height: 45px;
+  margin-bottom: 37px;
   border-radius: 15px;
   border: none;
 }
@@ -595,11 +598,17 @@ footer .subs .icons_social ul li a {
   margin-left: 5px;
   text-decoration: none;
 }
-footer .subs .icons_social ul li a i {
-  font-size: 35px;
+footer .subs .icons_social ul li a .icons {
+  width: 50px;
+  height: 50px;
 }
-footer .subs .icons_social ul li a i:hover {
-  color: #eb4d4b !important;
+footer .subs .icons_social ul li a .icons img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+footer .subs .icons_social ul li a .icons img:hover {
+  color: #eb4d4b;
 }
 @media only screen and (max-width: 391px) {
   footer .contact {
