--- a/assets/scss/login.scss
+++ b/assets/scss/login.scss
@@ -379,6 +379,8 @@ header {
                 padding: 15px;
                 .text {
                     p {
+                      font-weight:700;
+                      line-height: 0px;
                         font-size: 16px;
                         color: #333;
                         padding-top: 3px;
@@ -491,6 +493,7 @@ footer {
           display: inline-block;
           width: 46%;
           height: 45px;
+          margin-bottom: 37px;
           border-radius: 15px;
           border: none;
         }
@@ -618,13 +621,20 @@ footer {
             a {
               margin-left: 5px;
               text-decoration: none;
-  
-              i {
-                font-size: 35px;
-                &:hover {
-                  color: #eb4d4b !important;
+              .icons{
+                width: 50px;
+                height: 50px;
+                img{
+                  width: 100%;
+                  height: 100%;
+                  border-radius: 50%;
+                  &:hover{
+                    color: #eb4d4b;
+                  }
                 }
+               
               }
+              
             }
           }
         }
