--- a/assets/scss/registr.scss
+++ b/assets/scss/registr.scss
@@ -441,6 +441,7 @@ footer {
         display: inline-block;
         width: 46%;
         height: 45px;
+        margin-bottom: 37px;
         border-radius: 15px;
         border: none;
       }
@@ -568,13 +569,20 @@ footer {
           a {
             margin-left: 5px;
             text-decoration: none;
-
-            i {
-              font-size: 35px;
-              &:hover {
-                color: #eb4d4b !important;
+            .icons{
+              width: 50px;
+              height: 50px;
+              img{
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                &:hover{
+                  color: #eb4d4b;
+                }
               }
+             
             }
+            
           }
         }
       }
