--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -814,6 +814,7 @@ header {
       padding: 5px;
       margin: 1px;
       display: inline-block;
+      cursor: pointer;
       &:hover {
         background-color: #f3ebeb;
       }
@@ -1100,7 +1101,6 @@ header {
     }
   }
 }
-
 footer {
   background-color: rgb(242, 246, 249);
   padding: 65px 0 0 0;
@@ -1134,6 +1134,7 @@ footer {
         display: inline-block;
         width: 46%;
         height: 45px;
+        margin-bottom: 37px;
         border-radius: 15px;
         border: none;
       }
@@ -1261,13 +1262,20 @@ footer {
           a {
             margin-left: 5px;
             text-decoration: none;
-
-            i {
-              font-size: 35px;
-              &:hover {
-                color: #eb4d4b !important;
+            .icons{
+              width: 50px;
+              height: 50px;
+              img{
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                &:hover{
+                  color: #eb4d4b;
+                }
               }
+             
             }
+            
           }
         }
       }
