--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -128,23 +128,16 @@ header {
           transition: 1s;
           z-index: 1;
           overflow: hidden;
-
-        
-
           .box_device {
             li {
-              border-bottom: 1px solid black;
-              padding: 15px;
+              border-bottom: 1px solid rgb(167, 164, 164);
               display: flex;
               list-style: none;
               .cart_image {
-                width: 90px;
-                height: 120px;
-                border-right: 1px solid black;
+                border-right: 1px solid rgb(192, 188, 188);
                 img {
-                  padding: 10px;
-                  width: 100%;
-                  height: 100%;
+                  width: 100px;
+                  height: 100px;
                   object-fit: contain;
                 }
               }
@@ -152,21 +145,28 @@ header {
                 padding: 20px;
                 margin-left: 25px;
               }
-              .exitbutton {
-                position: absolute;
-                right: 12px;
-                font-size: 13px;
-                cursor: pointer;
+              .cart-sticky {
+                position: fixed;
+                background: #fff;
+                display: contents;
+                z-index: 99;
+                .exitbutton {
+                  display: flex;
+                  align-items: center;
+                  justify-content: space-between;
+                  padding: 5px 0 15px;
+                  border-bottom: 1px solid #eee;
+                  margin-bottom: 5px;
+                }
               }
+            
             }
           }
           .cart_button_x {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 5px 0 15px;
-            border-bottom: 1px solid #eee;
-            margin-bottom: 5px;
+            position: fixed;
+            background: #fff;
+            display: contents;
+            z-index: 99;
           }
         }
       }
@@ -728,7 +728,6 @@ header {
   }
 
   .item {
-    width: 100%;
     display: flex;
     justify-content: center;
     .detail {
@@ -749,6 +748,8 @@ header {
         top: -60px;
         left: 50px;
       }
+    
+
     }
     .user_description {
       margin-bottom: 15px;
@@ -1093,7 +1094,7 @@ header {
   .item{
     .image{
       img{
-        transition: 0.6s all;
+        transition: 1s all;
       }
       &:hover img{
           transform: rotateY(360deg);
