upper buttons done

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1424,4 +1424,21 @@ footer .secondFooter .box .text-img p a {
     text-decoration: none;
     color: white;
   }
+}
+
+.circle .upper {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  background-color: #eb4d4b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 80px;
+  right: 28px;
+}
+.circle .upper .up i {
+  color: white;
+  font-size: 24px;
 }/*# sourceMappingURL=style.css.map */
