--- a/assets/scss/cart.scss
+++ b/assets/scss/cart.scss
@@ -40,4 +40,68 @@
       }
     }
   }
+
+
+}
+
+.container{
+  .row{
+    .accordion{
+      .devices_info{
+        .cart_info_faq_title{
+          display: flex;
+          justify-content: space-between;
+          height: 40px;
+          border: 1px solid #e0dada;
+        }
+      }
+      .cart_info_{
+        display: none;
+      }
+      .active{
+        display: block;
+      }
+    }
+    .cart-bottom {
+      position: sticky;
+      bottom: 0px;
+      width: 100%;
+      height: 30%;
+      border-top: 1px solid #eee;
+      background-color: white;
+      ul {
+        line-height: 30px;
+        font-size: 15px;
+        padding: 0;
+        margin: 0;
+        li {
+          margin: 0;
+          display: flex;
+          justify-content: space-between;
+          span:nth-child(even) {
+            font-weight: 500;
+          }
+        }
+      }
+      .buttons {
+        width: 100%;
+        padding: 10px 0;
+        display: flex;
+        justify-content:flex-end;
+        align-items: center;
+        button {
+          font-size: 14px;
+          height: 40px;
+          width: 49%;
+          border: none;
+          background-color: #232323;
+          color: white;
+          transition: 0.5s;
+          &:hover {
+            background-color: #eb4d50;
+          }
+        }
+      }
+    }
+  }
 }
